--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -182,6 +182,7 @@ header {
     height: 100vh;
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
 }
 
 .hero-text-box {
@@ -347,3 +348,44 @@ cities
     margin-bottom: 5px;
 }
 
+
+/*        Testimonials       */
+
+.section-testimonials {
+    background-image: linear-gradient(rgb(0, 0, 0, .8), rgb(0, 0, 0, .8)), url(./images/back-customers.jpg);
+    background-size: cover;
+    color: white;
+    background-attachment: fixed;
+}
+
+blockquote {
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+    position: relative;
+    margin-top: 40px;
+}
+
+blockquote:before {
+    content: "\201C";
+    font-size: 500%;
+    display: block;
+    position: absolute;
+    top: -5px;
+    left: -3px;
+}
+
+cite {
+    font-style: 90%;
+    margin-top: 25px;
+    display: block;
+}
+
+
+
+cite img {
+    height: 45px;
+    border-radius: 50%;
+    margin-right: 10px;
+    vertical-align: middle;
+}
